--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../../css/style.css" />
   </head>
 
-  <body>
+  <body class="bg-light">
     <header><%- include('./partials/header'); %></header>
     <main class="container mt-2">
       <form
