--- a/src/views/partials/post.ejs
+++ b/src/views/partials/post.ejs
@@ -1,4 +1,4 @@
-<div class="row bg-light rounded-3 p-3 mt-2">
+<div class="row bg-white rounded-3 p-3 mt-2">
   <div class="col-md-4">
     <img src="../../../img/thanhpho.jpeg" class="card-img-top" alt="" />
   </div>
@@ -20,7 +20,7 @@
     <a href="#" class="btn btn-primary">Zalo</a>
   </div>
 </div>
-<div class="row bg-light rounded-3 p-3 mt-2">
+<div class="row bg-white rounded-3 p-3 mt-2">
   <div class="col-md-4">
     <img src="../../../img/thanhpho.jpeg" class="card-img-top" alt="" />
   </div>
@@ -42,7 +42,7 @@
     <a href="#" class="btn btn-primary">Zalo</a>
   </div>
 </div>
-<div class="row bg-light rounded-3 p-3 mt-2">
+<div class="row bg-white rounded-3 p-3 mt-2">
   <div class="col-md-4">
     <img src="../../../img/thanhpho.jpeg" class="card-img-top" alt="" />
   </div>
