--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,27 +1,35 @@
-<h3 class="fs-4">Danh Mục Cho Thuê</h3>
-<ol class="list-group list-group-numbered mt-2">
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Cras justo odio
-    </div>
-    <span class="badge bg-primary rounded-pill">14</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Cras justo odio
-    </div>
-    <span class="badge bg-primary rounded-pill">14</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between align-items-start">
-    <div class="ms-2 me-auto">
-      <div class="fw-bold">Subheading</div>
-      Cras justo odio
-    </div>
-    <span class="badge bg-primary rounded-pill">14</span>
-  </li>
-</ol>
+<div class="d-none d-md-block">
+  <h3 class="fs-4">Danh Mục Cho Thuê</h3>
+  <ol class="list-group list-group-numbered mt-2">
+    <li
+      class="list-group-item d-flex justify-content-between align-items-start"
+    >
+      <div class="ms-2 me-auto">
+        <div class="fw-bold">Subheading</div>
+        Cras justo odio
+      </div>
+      <span class="badge bg-primary rounded-pill">14</span>
+    </li>
+    <li
+      class="list-group-item d-flex justify-content-between align-items-start"
+    >
+      <div class="ms-2 me-auto">
+        <div class="fw-bold">Subheading</div>
+        Cras justo odio
+      </div>
+      <span class="badge bg-primary rounded-pill">14</span>
+    </li>
+    <li
+      class="list-group-item d-flex justify-content-between align-items-start"
+    >
+      <div class="ms-2 me-auto">
+        <div class="fw-bold">Subheading</div>
+        Cras justo odio
+      </div>
+      <span class="badge bg-primary rounded-pill">14</span>
+    </li>
+  </ol>
+</div>
 <h3 class="fs-4 mt-5">Bài Đăng Mới</h3>
 <div class="row rounded-3">
   <div class="col-md-4">
@@ -36,7 +44,7 @@
       <i class="fa fas fa-star"></i>
       <i class="fa fas fa-star"></i>
     </div>
-    <p class="card-price text-success">500.000.000 <span>/tháng</span></p>
+    <p class="card-price text-success">50.000.000 <span>/tháng</span></p>
   </div>
 </div>
 <div class="row rounded-3">
