--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -59,27 +59,11 @@
               ></button>
             </div>
             <div class="carousel-inner">
+              <% post.images.forEach(function(image, index) { %>
               <div class="carousel-item active">
-                <img
-                  src="https://source.unsplash.com/random"
-                  class="d-block w-100"
-                  alt="..."
-                />
+                <img src="<%= image %>" class="d-block w-100" alt="..." />
               </div>
-              <div class="carousel-item">
-                <img
-                  src="https://source.unsplash.com/random"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://source.unsplash.com/random"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
+              <% }) %>
             </div>
             <button
               class="carousel-control-prev"
@@ -109,7 +93,7 @@
           <!-- details -->
           <div class="row mt-2">
             <div class="col-md-10">
-              <h1 class="fw-bold fs-4"><%= post.title %></h1>
+              <h1 class="fw-bold fs-4 text-capitalize"><%= post.title %></h1>
             </div>
             <div class="col-md-2">
               <div class="card-rate text-warning">
@@ -120,7 +104,7 @@
                 <i class="fa fas fa-star"></i>
               </div>
             </div>
-            <p class="text-muted">
+            <p class="text-muted m-0 mb-md-2">
               <span>
                 <i class="fa fas fa-map-marker"></i>
               </span>
@@ -128,29 +112,22 @@
             </p>
             <div class="row align-items-center">
               <div class="col-md-6 text-success fw-bold fs-5">
-                <%= post.price %><span>/Tháng</span>
+                <%= post.price.toLocaleString('vi-VN', { style: 'currency',
+                currency: 'VND' }) %><span>/Tháng</span>
               </div>
               <div class="col-md-2 text-muted">15<span>m2</span></div>
               <div class="col-md-2 text-muted">Hôm nay</div>
               <div class="col-md-2 text-muted">#213123</div>
             </div>
-            <h4 class="fw-bold fs-4 mt-5">Thông tin mô tả</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-              cumque a maiores exercitationem dolorum illum! Quisquam maiores
-              fugit iste labore veritatis aut saepe nam placeat nulla
-              repudiandae. Optio commodi delectus fugiat ipsa possimus sequi
-              praesentium ratione voluptate, nostrum debitis molestiae accusamus
-              porro deleniti eos aliquam laboriosam dolores animi perspiciatis?
-              Impedit?
-            </p>
+            <h4 class="fw-bold fs-4 mt-2">Thông tin mô tả</h4>
+            <p><%= post.description %></p>
           </div>
         </div>
         <div class="col-md-4 mt-2 mt-md-0">
-          <div class="card text-center p-2 bg-yellow" style="height: 300px">
+          <div class="card text-center p-2 bg-yellow" style="height: auto">
             <img
               src="https://source.unsplash.com/random"
-              class="card-img-top rounded-circle d-block mx-auto"
+              class="card-img-top rounded-circle d-block mx-auto avatar"
               style="width: 100px"
               ,
               height="100px"
@@ -158,10 +135,12 @@
               ojbect-fit="cover"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body d-flex flex-column justify-content-between">
               <h5 class="card-title fw-bold">Nhà Trọ Sạch Sẽ</h5>
-              <a href="#" class="btn btn-success">1231231323</a>
-              <a href="#" class="btn btn-primary">Zalo</a>
+              <div class="mt-auto">
+                <a href="#" class="btn btn-success">1231231323</a>
+                <a href="#" class="btn btn-primary">Zalo</a>
+              </div>
             </div>
           </div>
           <div class="mt-2"><%- include('./partials/sidebar'); %></div>
