--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -147,9 +147,7 @@
         </div>
       </div>
     </main>
-    <footer class="bg-blue text-white text-center text-lg-start mt-5">
-      <%- include('./partials/footer'); %>
-    </footer>
+    <footer><%- include('./partials/footer'); %></footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
