--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -117,9 +117,7 @@
         <div class="col-md-4 col-12"><%- include("./partials/sidebar"); %></div>
       </section>
     </main>
-    <footer class="bg-blue text-white text-center text-lg-start">
-      <%- include('./partials/footer'); %>
-    </footer>
+    <footer><%- include('./partials/footer'); %></footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
