--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,51 +1,92 @@
-<div class="container p-4">
-  <div class="row">
-    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-      <h5 class="text-uppercase">Footer Content</h5>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
-    </div>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  ></section>
 
-    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-      <h5 class="text-uppercase">Links</h5>
-      <ul class="list-unstyled mb-0">
-        <li>
-          <a href="#!" class="text-dark">Link 1</a>
-        </li>
-        <li>
-          <a href="#!" class="text-dark">Link 2</a>
-        </li>
-        <li>
-          <a href="#!" class="text-dark">Link 3</a>
-        </li>
-        <li>
-          <a href="#!" class="text-dark">Link 4</a>
-        </li>
-      </ul>
-    </div>
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Phòng Trọ Siêu Đẹp
+          </h6>
+          <p>
+            Here you can use rows and columns to organize your footer content.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </div>
+        <!-- Grid column -->
 
-    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-      <h5 class="text-uppercase">Links</h5>
-      <ul class="list-unstyled mb-0">
-        <li>
-          <a href="#!" class="text-dark">Link 1</a>
-        </li>
-        <li>
-          <a href="#!" class="text-dark">Link 2</a>
-        </li>
-        <li>
-          <a href="#!" class="text-dark">Link 3</a>
-        </li>
-        <li>
-          <a href="#!" class="text-dark">Link 4</a>
-        </li>
-      </ul>
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4"></h6>
+          <p>
+            <a href="#!" class="text-reset">Angular</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">React</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Vue</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Laravel</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
+          <p>
+            <a href="#!" class="text-reset">Pricing</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Settings</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Orders</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Help</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
     </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05)">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="#"
+      >Website by Trần Bảo Vĩ - Huỳnh Anh Tuấn - Nguyễn Hoàng Tuấn</a
+    >
   </div>
-</div>
-
-<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-  © 2023 My Website
-</div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
