--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -33,8 +33,8 @@
         <a href="#" class="btn btn-danger"
           >Đăng Bài <i class="fa fa-plus"></i
         ></a>
-        <a href="#" class="btn btn-success">Đăng Nhập</a>
-        <a href="#" class="btn btn-success">Đăng Ký</a>
+        <a href="/signin" class="btn btn-success">Đăng Nhập</a>
+        <a href="/signup" class="btn btn-success">Đăng Ký</a>
       </div>
     </div>
   </div>
