--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -71,7 +71,7 @@
                             >Birthday</label
                           >
                           <input
-                            type="text"
+                            type="date"
                             class="form-control form-control-lg"
                             id="birthdayDate"
                           />
@@ -144,6 +144,19 @@
                             id="phoneNumber"
                             class="form-control form-control-lg"
                             name="phone"
+                          />
+                        </div>
+                      </div>
+                      <div class="col-12 mb-4">
+                        <div class="form-outline">
+                          <label class="form-label" for="address"
+                            >Address</label
+                          >
+                          <input
+                            type="text"
+                            id="address"
+                            class="form-control form-control-lg"
+                            name="address"
                           />
                         </div>
                       </div>
