--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -16,6 +16,13 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="../../css/style.css" />
   </head>
 
@@ -55,7 +62,7 @@
                             >Password</label
                           >
                           <input
-                            type="text"
+                            type="password"
                             id="password"
                             class="form-control form-control-lg"
                             name="password"
