--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,7 +30,7 @@
     <header><%- include('./partials/header'); %></header>
     <main class="container mt-2">
       <form
-        class="row bg-yellow rounded-3 p-3 justify-content-center"
+        class="row bg-yellow rounded-3 p-3 justify-content-center container mx-auto"
         style="gap: 10px"
       >
         <div class="col-md-2 col-12">
@@ -84,6 +84,31 @@
           </button>
         </div>
       </form>
+      <% if(locals.user) { %>
+      <div
+        class="row bg-primary d-md-none mt-3 rounded-3 py-3 px-2 container mx-auto"
+      >
+        <div class="col-12">
+          <div class="d-flex gap-3 align-items-start">
+            <!-- avatar -->
+            <img
+              src="../../img/thanhpho.jpeg"
+              class="rounded-circle"
+              alt="..."
+              style="width: 50px; height: 50px"
+            />
+            <div class="d-flex flex-column">
+              <p class="text-white">
+                Xin chào <strong class="fs-4"><%= user.username%> !</strong>
+              </p>
+              <p class="text-white">
+                Đi đến trang đăng tin hoặc quản lý tin đăng của bạn
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% } %>
       <div
         class="row container text-center d-md-flex justify-content-center d-none"
       >
