--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="../../../img/logo.png" alt="" width="50" height="50" />
+      <img
+        src="../../../img/logo.png"
+        class="rounded-3"
+        alt=""
+        width="50"
+        height="50"
+      />
     </a>
     <button
       class="navbar-toggler"
@@ -29,17 +35,16 @@
           <a class="nav-link" href="#">Tìm Người Ở Ghép</a>
         </li>
       </ul>
-      <div class="d-flex" style="gap: 10px">
-        <a href="#" class="btn btn-danger"
-          >Đăng Bài <i class="fa fa-plus"></i
-        ></a>
-        <% if (user) { %>
-        <a href="/profile" class="btn btn-success">Tài Khoản</a>
+      <div class="d-flex align-items-center" style="gap: 10px">
+        <% if (locals.user){ %>
         <a href="/logout" class="btn btn-success">Đăng Xuất</a>
         <% } else { %>
         <a href="/signin" class="btn btn-success">Đăng Nhập</a>
         <a href="/signup" class="btn btn-success">Đăng Ký</a>
         <% } %>
+        <a href="#" class="btn btn-danger"
+          >Đăng Bài <i class="fa fa-plus"></i
+        ></a>
       </div>
     </div>
   </div>
