--- a/src/views/create-post.ejs
+++ b/src/views/create-post.ejs
@@ -35,7 +35,12 @@
 
       <!-- .form new post -->
 
-      <form id="create-post-form" method="post" action="/quan-ly/posts">
+      <form
+        id="create-post-form"
+        method="post"
+        action="/quan-ly/posts"
+        enctype="multipart/form-data"
+      >
         <div class="row">
           <div class="col-md-8">
             <div class="row">
@@ -55,7 +60,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label class="col-form-label">Quận/Huyện</label>
-                  <select id="district" class="form-control">
+                  <select name="district" id="district" class="form-control">
                     <option value="">chọn quận huyện</option>
                   </select>
                 </div>
@@ -63,17 +68,17 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label class="col-form-label">Phường/Xã</label>
-                  <select id="ward" class="form-control">
+                  <select name="ward" id="ward" class="form-control">
                     <option value="">chọn phường xã</option>
                   </select>
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-3">
+              <div class="col-md-6">
                 <div class="form-group">
                   <label class="col-form-label">Số nhà</label>
-                  <input type="text" class="form-control" />
+                  <input name="houseNumber" type="text" class="form-control" />
                 </div>
               </div>
             </div>
@@ -81,7 +86,7 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <label class="col-form-label">Địa chỉ chính xác</label>
-                  <input type="text" class="form-control" />
+                  <input name="address" type="text" class="form-control" />
                 </div>
               </div>
             </div>
@@ -95,10 +100,12 @@
               <div class="col-md-6">
                 <select name="category" class="form-control">
                   <option value="">-- Chọn loại chuyên mục --</option>
-                  <option value="1">Phòng trọ, nhà trọ</option>
-                  <option value="2">Nhà thuê nguyên căn</option>
-                  <option value="3">Tìm người ở ghép</option>
-                  <option value="4">Cho thuê mặt bằng</option>
+                  <% categories.forEach(element => { %>
+                  <option value="<%= element._id %>"><%= element.title %></option>
+                  <option value="<%= element._id %>"><%= element.title %></option>
+                  <option value="<%= element._id %>"><%= element.title %></option>
+                  <option value="<%= element._id %>"><%= element.title %></option>
+                  <% }) %>
                 </select>
               </div>
             </div>
@@ -118,7 +125,7 @@
               <label for="phone" class="col-md-12 col-form-label">Thông tin liên hệ</label>
               <div class="col-md-6">
                 <div class="input-group mb-3">
-                  <input name="username" type="text" class="form-control" readonly value="tuan" />
+                  <input type="text" class="form-control" readonly value="<%= user?.username %>" />
                 </div>
               </div>
             </div>
@@ -130,8 +137,7 @@
                     type="number"
                     class="form-control"
                     readonly="readonly"
-                    value="0704975211"
-                    name="phone"
+                    value="<%= user?.phone %>"
                   />
                 </div>
               </div>
@@ -152,34 +158,29 @@
               <label class="col-sm-12 control-label"></label>
             </div>
             <div class="form-group row">
-              <label for="post_acreage" class="col-md-12 col-form-label">Diện tích</label>
+              <label for="acreage" class="col-md-12 col-form-label">Diện tích</label>
               <div class="col-md-6">
                 <div class="input-group mb-3">
-                  <input name="area" type="number" class="form-control" />
+                  <input name="acreage" type="number" class="form-control" />
                   <div class="input-group-append">
                     <span class="input-group-text">m<sup>2</sup></span>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-md-12 col-form-label">Đối tượng cho thuê</label>
-              <div class="col-md-6">
-                <div class="input-group mb-3">
-                  <select name="gender" class="form-control">
-                    <option value="Tất cả">-- Tất cả --</option>
-                    <option value="0">Nam</option>
-                    <option value="1">Nữ</option>
-                  </select>
-                </div>
-              </div>
-            </div>
+
             <div class="form-group row mt-5">
               <div class="col-md-12">
                 <h3>Hình ảnh</h3>
               </div>
               <div class="col-md-6">
-                <input type="file[]" class="form-control" />
+                <input
+                  name="file"
+                  accept="image/gif, image/jpeg, image/png"
+                  multiple
+                  type="file"
+                  class="form-control"
+                />
               </div>
             </div>
 
