--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -27,13 +27,12 @@
 
     <script defer src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script
       defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
-      integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"
     ></script>
+
     <script type="module" src="../../js/main.js" defer></script>
   </head>
 </html>
