fix bug and setup ejs layouts

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -38,8 +38,8 @@
       <div class="d-flex align-items-center" style="gap: 10px">
         <% if (locals.user){ %>
         <a
-          href="/posts"
-          class="bg-light p-2 rounded-3 text-dark text-capitalize text-decoration-none"
+          href="/quan-ly/posts"
+          class="p-2 rounded-3 text-white text-capitalize text-decoration-none d-none d-md-block"
           >Xin Chào, <%= user.username %></a
         >
         <a href="/logout" class="btn btn-success">Đăng Xuất</a>
