--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -1,164 +1,115 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title><%= title %></title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="../../css/style.css" />
-  </head>
-
-  <body>
-    <header><%- include('./partials/header'); %></header>
-    <main class="container">
-      <div class="row justify-content-between mt-2">
-        <div class="col-md-8">
-          <div
-            id="carouselExampleIndicators"
-            class="carousel slide"
-            data-bs-ride="carousel"
+<body>
+  <main class="container">
+    <div class="row justify-content-between mt-2">
+      <div class="col-md-8">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <% post.images.forEach(function(image, index) { %>
+            <div class="carousel-item active">
+              <img src="<%= image %>" class="d-block w-100" alt="..." />
+            </div>
+            <% }) %>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
           >
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
-            </div>
-            <div class="carousel-inner">
-              <% post.images.forEach(function(image, index) { %>
-              <div class="carousel-item active">
-                <img src="<%= image %>" class="d-block w-100" alt="..." />
-              </div>
-              <% }) %>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <!-- details -->
-          <div class="row mt-2">
-            <div class="col-md-10">
-              <h1 class="fw-bold fs-4 text-capitalize"><%= post.title %></h1>
-            </div>
-            <div class="col-md-2">
-              <div class="card-rate text-warning">
-                <i class="fa fas fa-star"></i>
-                <i class="fa fas fa-star"></i>
-                <i class="fa fas fa-star"></i>
-                <i class="fa fas fa-star"></i>
-                <i class="fa fas fa-star"></i>
-              </div>
-            </div>
-            <p class="text-muted m-0 mb-md-2">
-              <span>
-                <i class="fa fas fa-map-marker"></i>
-              </span>
-              Địa chỉ: <%= post.address %>
-            </p>
-            <div class="row align-items-center">
-              <div class="col-md-6 text-success fw-bold fs-5">
-                <%= post.price.toLocaleString('vi-VN', { style: 'currency',
-                currency: 'VND' }) %><span>/Tháng</span>
-              </div>
-              <div class="col-md-2 text-muted">15<span>m2</span></div>
-              <div class="col-md-2 text-muted">Hôm nay</div>
-              <div class="col-md-2 text-muted">#213123</div>
-            </div>
-            <h4 class="fw-bold fs-4 mt-2">Thông tin mô tả</h4>
-            <p><%= post.description %></p>
-          </div>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="col-md-4 mt-2 mt-md-0">
-          <div class="card text-center p-2 bg-yellow" style="height: auto">
-            <img
-              src="https://source.unsplash.com/random"
-              class="card-img-top rounded-circle d-block mx-auto avatar"
-              style="width: 100px"
-              ,
-              height="100px"
-              ,
-              ojbect-fit="cover"
-              alt="..."
-            />
-            <div class="card-body d-flex flex-column justify-content-between">
-              <h5 class="card-title fw-bold">Nhà Trọ Sạch Sẽ</h5>
-              <div class="mt-auto">
-                <a href="#" class="btn btn-success">1231231323</a>
-                <a href="#" class="btn btn-primary">Zalo</a>
-              </div>
+        <!-- details -->
+        <div class="row mt-2">
+          <div class="col-md-10">
+            <h1 class="fw-bold fs-4 text-capitalize"><%= post.title %></h1>
+          </div>
+          <div class="col-md-2">
+            <div class="card-rate text-warning">
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
             </div>
           </div>
-          <div class="mt-2"><%- include('./partials/sidebar'); %></div>
+          <p class="text-muted m-0 mb-md-2">
+            <span>
+              <i class="fa fas fa-map-marker"></i>
+            </span>
+            Địa chỉ: <%= post.address %>
+          </p>
+          <div class="row align-items-center">
+            <div class="col-md-6 text-success fw-bold fs-5">
+              <%= post.price.toLocaleString('vi-VN', { style: 'currency',
+              currency: 'VND' }) %><span>/Tháng</span>
+            </div>
+            <div class="col-md-2 text-muted">15<span>m2</span></div>
+            <div class="col-md-2 text-muted">Hôm nay</div>
+            <div class="col-md-2 text-muted">#213123</div>
+          </div>
+          <h4 class="fw-bold fs-4 mt-2">Thông tin mô tả</h4>
+          <p><%= post.description %></p>
         </div>
       </div>
-    </main>
-    <footer><%- include('./partials/footer'); %></footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+      <div class="col-md-4 mt-2 mt-md-0">
+        <div class="card text-center p-2 bg-yellow" style="height: auto">
+          <img
+            src="https://source.unsplash.com/random"
+            class="card-img-top rounded-circle d-block mx-auto avatar"
+            style="width: 100px"
+            ,
+            height="100px"
+            ,
+            ojbect-fit="cover"
+            alt="..."
+          />
+          <div class="card-body d-flex flex-column justify-content-between">
+            <h5 class="card-title fw-bold">Nhà Trọ Sạch Sẽ</h5>
+            <div class="mt-auto">
+              <a href="#" class="btn btn-success">1231231323</a>
+              <a href="#" class="btn btn-primary">Zalo</a>
+            </div>
+          </div>
+        </div>
+        <div class="mt-2"><%- include('./partials/sidebar'); %></div>
+      </div>
+    </div>
+  </main>
+</body>
