--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -75,7 +75,9 @@
             <thead>
               <tr>
                 <th>Mã tin</th>
-                <th style="text-align: center; white-space: nowrap">Ảnh đại diện</th>
+                <th style="text-align: center; white-space: nowrap">
+                  Ảnh đại diện
+                </th>
                 <th>Tiêu đề</th>
                 <th>Giá</th>
                 <th style="white-space: nowrap">Ngày bắt đầu</th>
