--- a/src/views/create-post.ejs
+++ b/src/views/create-post.ejs
@@ -26,9 +26,10 @@
         <h1 class="h2">Đăng tin mới</h1>
       </div>
       <p class="alert alert-danger mb-5" role="alert">
-        Nếu bạn đã từng đăng tin trên Phongtro123.com, hãy sử dụng chức năng ĐẨY TIN / GIA HẠN /
-        NÂNG CẤP VIP trong mục QUẢN LÝ TIN ĐĂNG để làm mới, đẩy tin lên cao thay vì đăng tin mới.
-        Tin đăng trùng nhau sẽ không được duyệt.
+        Nếu bạn đã từng đăng tin trên Phongtro123.com, hãy sử dụng chức năng ĐẨY
+        TIN / GIA HẠN / NÂNG CẤP VIP trong mục QUẢN LÝ TIN ĐĂNG để làm mới, đẩy
+        tin lên cao thay vì đăng tin mới. Tin đăng trùng nhau sẽ không được
+        duyệt.
       </p>
 
       <!--  -->
@@ -101,10 +102,9 @@
                 <select name="category" class="form-control">
                   <option value="">-- Chọn loại chuyên mục --</option>
                   <% categories.forEach(element => { %>
-                  <option value="<%= element._id %>"><%= element.title %></option>
-                  <option value="<%= element._id %>"><%= element.title %></option>
-                  <option value="<%= element._id %>"><%= element.title %></option>
-                  <option value="<%= element._id %>"><%= element.title %></option>
+                  <option value="<%= element._id %>">
+                    <%= element.title %>
+                  </option>
                   <% }) %>
                 </select>
               </div>
@@ -118,22 +118,36 @@
             <div class="form-group row">
               <label class="col-md-12 col-form-label">Nội dung mô tả</label>
               <div class="col-md-12">
-                <textarea name="description" class="form-control" rows="10"></textarea>
+                <textarea
+                  name="description"
+                  class="form-control"
+                  rows="10"
+                ></textarea>
               </div>
             </div>
             <div class="form-group row">
-              <label for="phone" class="col-md-12 col-form-label">Thông tin liên hệ</label>
+              <label for="phone" class="col-md-12 col-form-label"
+                >Thông tin liên hệ</label
+              >
               <div class="col-md-6">
                 <div class="input-group mb-3">
-                  <input type="text" class="form-control" readonly value="<%= user?.username %>" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    readonly
+                    value="<%= user?.username %>"
+                  />
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label for="phone" class="col-md-12 col-form-label">Điện thoại</label>
+              <label for="phone" class="col-md-12 col-form-label"
+                >Điện thoại</label
+              >
               <div class="col-md-6">
                 <div class="input-group mb-3">
                   <input
+                    name="phone"
                     type="number"
                     class="form-control"
                     readonly="readonly"
@@ -158,7 +172,9 @@
               <label class="col-sm-12 control-label"></label>
             </div>
             <div class="form-group row">
-              <label for="acreage" class="col-md-12 col-form-label">Diện tích</label>
+              <label for="acreage" class="col-md-12 col-form-label"
+                >Diện tích</label
+              >
               <div class="col-md-6">
                 <div class="input-group mb-3">
                   <input name="acreage" type="number" class="form-control" />
@@ -186,7 +202,9 @@
 
             <div class="form-group row mt-5">
               <div class="col-md-12">
-                <button type="submit" class="btn btn-success mb-5 btn-lg w-100">Tiếp tục</button>
+                <button type="submit" class="btn btn-success mb-5 btn-lg w-100">
+                  Tiếp tục
+                </button>
               </div>
             </div>
           </div>
@@ -207,7 +225,11 @@
             <!-- note -->
             <div
               class="card"
-              style="color: #856404; background-color: #fff3cd; border-color: #ffeeba"
+              style="
+                color: #856404;
+                background-color: #fff3cd;
+                border-color: #ffeeba;
+              "
             >
               <div class="card-body">
                 <h4 class="card-title">Lưu ý khi đăng tin</h4>
@@ -219,15 +241,18 @@
                     Tiêu đề tin không dài quá 100 kí tự
                   </li>
                   <li style="list-style-type: square; margin-left: 15px">
-                    Các bạn nên điền đầy đủ thông tin vào các mục để tin đăng có hiệu quả hơn.
+                    Các bạn nên điền đầy đủ thông tin vào các mục để tin đăng có
+                    hiệu quả hơn.
                   </li>
                   <li style="list-style-type: square; margin-left: 15px">
-                    Để tăng độ tin cậy và tin rao được nhiều người quan tâm hơn, hãy sửa vị trí tin
-                    rao của bạn trên bản đồ bằng cách kéo icon tới đúng vị trí của tin rao.
+                    Để tăng độ tin cậy và tin rao được nhiều người quan tâm hơn,
+                    hãy sửa vị trí tin rao của bạn trên bản đồ bằng cách kéo
+                    icon tới đúng vị trí của tin rao.
                   </li>
                   <li style="list-style-type: square; margin-left: 15px">
-                    Tin đăng có hình ảnh rõ ràng sẽ được xem và gọi gấp nhiều lần so với tin rao
-                    không có ảnh. Hãy đăng ảnh để được giao dịch nhanh chóng!
+                    Tin đăng có hình ảnh rõ ràng sẽ được xem và gọi gấp nhiều
+                    lần so với tin rao không có ảnh. Hãy đăng ảnh để được giao
+                    dịch nhanh chóng!
                   </li>
                 </ul>
               </div>
