--- a/src/views/edit-user.ejs
+++ b/src/views/edit-user.ejs
@@ -30,7 +30,9 @@
 
       <form class="" action="#" method="POST">
         <div class="mb-3 row mt-5">
-          <label class="col-md-2 offset-md-2 col-form-label">Mã thành viên</label>
+          <label class="col-md-2 offset-md-2 col-form-label"
+            >Mã thành viên</label
+          >
           <div class="col-md-6">
             <input
               type="text"
@@ -42,7 +44,9 @@
           </div>
         </div>
         <div class="mb-3 row">
-          <label class="col-md-2 offset-md-2 col-form-label">Số điện thoại</label>
+          <label class="col-md-2 offset-md-2 col-form-label"
+            >Số điện thoại</label
+          >
           <div class="col-md-6">
             <input
               type="phone"
@@ -55,7 +59,9 @@
           </div>
         </div>
         <div class="mb-3 row">
-          <label class="col-md-2 offset-md-2 col-form-label">Tên hiển thị</label>
+          <label class="col-md-2 offset-md-2 col-form-label"
+            >Tên hiển thị</label
+          >
           <div class="col-md-6">
             <input type="text" class="form-control" name="name" value="tuan" />
           </div>
@@ -75,7 +81,9 @@
         </div>
 
         <div class="mb-3 row mt-5">
-          <label class="col-md-2 offset-md-2 col-form-label">Ảnh đại diện</label>
+          <label class="col-md-2 offset-md-2 col-form-label"
+            >Ảnh đại diện</label
+          >
           <div class="col-md-6">
             <div>
               <input type="file" class="" />
@@ -96,5 +104,3 @@
     <!-- main -->
   </div>
 </div>
-
-
