--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -80,8 +80,12 @@
               <%= post.price.toLocaleString('vi-VN', { style: 'currency',
               currency: 'VND' }) %><span>/Tháng</span>
             </div>
-            <div class="col-md-2 text-muted">15<span>m2</span></div>
-            <div class="col-md-2 text-muted">Hôm nay</div>
+            <div class="col-md-2 text-muted">
+              <%= post.acreage %><span>m2</span>
+            </div>
+            <div class="col-md-2 text-muted">
+              <%= moment(post.createdAt).format("Do MMMM, YYYY"); %>
+            </div>
             <div class="col-md-2 text-muted">#213123</div>
           </div>
           <h4 class="fw-bold fs-4 mt-2">Thông tin mô tả</h4>
@@ -91,7 +95,7 @@
       <div class="col-md-4 mt-2 mt-md-0">
         <div class="card text-center p-2 bg-yellow" style="height: auto">
           <img
-            src="https://source.unsplash.com/random"
+            src="<%= post.user_id.avatar %>"
             class="card-img-top rounded-circle d-block mx-auto avatar"
             style="width: 100px"
             ,
@@ -101,14 +105,13 @@
             alt="..."
           />
           <div class="card-body d-flex flex-column justify-content-between">
-            <h5 class="card-title fw-bold">Nhà Trọ Sạch Sẽ</h5>
+            <h5 class="card-title fw-bold"><%= post.user_id.username %></h5>
             <div class="mt-auto">
-              <a href="#" class="btn btn-success">1231231323</a>
+              <a href="#" class="btn btn-success"><%= post.user_id.phone %></a>
               <a href="#" class="btn btn-primary">Zalo</a>
             </div>
           </div>
         </div>
-        <div class="mt-2"><%- include('./partials/sidebar'); %></div>
       </div>
     </div>
   </main>
