--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,3 +80,15 @@ body {
     height: 100%;
   }
 }
+
+.img-post {
+  width: 100%;
+  height: 50px;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 767px) {
+  .img-post {
+    height: 200px;
+  }
+}
