--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -108,9 +108,9 @@
         </div>
       </div>
     </div>
-    <section class="row justify-content-between">
+    <section class="row justify-content-center gap-4">
       <div class="col-md-8 col-12"><%- include("./partials/post"); %></div>
-      <div class="col-md-4 col-12"><%- include("./partials/sidebar"); %></div>
+      <div class="col-md-3 col-12"><%- include("./partials/sidebar"); %></div>
     </section>
   </main>
 </body>
