--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,48 +1,44 @@
-<div class="d-none d-md-block">
-  <h3 class="fs-4">Danh Mục Cho Thuê</h3>
-  <ol class="list-group list-group-numbered mt-2">
-    <li
-      class="list-group-item d-flex justify-content-between align-items-start"
-    >
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">Cho thuê phòng trọ</div>
-      </div>
-      <span class="badge text-muted rounded-pill">1 giờ trước</span>
-    </li>
-    <li
-      class="list-group-item d-flex justify-content-between align-items-start"
-    >
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">Cho thuê nhà nguyên căn</div>
-      </div>
-      <span class="badge text-muted rounded-pill">vừa xong</span>
-    </li>
-    <li
-      class="list-group-item d-flex justify-content-between align-items-start"
-    >
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">Tìm người ở ghép</div>
-      </div>
-      <span class="badge text-muted rounded-pill">vừa xong</span>
-    </li>
-  </ol>
-</div>
-<h3 class="fs-4 mt-5">Bài Đăng Mới</h3>
-<% posts.forEach(element => { %>
-<div class="row border-bottom mb-2">
-  <div class="col-md-4">
-    <img src="<%- element.images[0]  %>" class="card-img-top" alt="" />
+<h3 class="fs-4">Bài Đăng Mới</h3>
+<% postsNew.forEach(element => { %>
+<div class="row mb-2 p-2 bg-white rounded-3 justify-content-center">
+  <div class="col-md-4 card-top">
+    <img
+      src="<%- element.images[0]%>"
+      class="img-post"
+      style="object-fit: cover"
+      alt=""
+    />
   </div>
   <div class="col-md-8">
-    <h5 class="card-title text-primary"><%- element.title %></h5>
-    <div class="card-rate text-warning">
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
+    <h5 class="card-title text-primary fs-6"><%- element.title %></h5>
+    <div class="card-rate">
+      <% if (element.isvip === "vip3") { %>
+      <div class="text-danger">
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+      </div>
+
+      <% } else if (element.isvip === "vip2") { %>
+      <div style="color: #ff8b13">
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+      </div>
+
+      <% } else if (element.isvip === "vip1") { %>
+      <div class="text-warning">
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+        <i class="fa fas fa-star"></i>
+      </div>
+
+      <% } %>
     </div>
-    <p class="card-price text-success">
+    <p class="card-price text-success fs-6">
       <%= element.price.toLocaleString('vi-VN', { style: 'currency', currency:
       'VND' }) %><span>/Tháng</span>
     </p>
