--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -49,5 +49,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="../../../js/homePage.js"></script>
+    <script src="../../../js/login.js"></script>
   </body>
 </html>
