--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -11,16 +11,14 @@
             />
           </div>
           <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-            <form method="post">
+            <form id="login-form">
               <h1 class="fs-4 fw-bolder">Đăng nhập</h1>
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <label class="form-label" for="form3Example3"
-                  >Email address</label
-                >
+                <label class="form-label" for="email">Email address</label>
                 <input
                   type="email"
-                  id="form3Example3"
+                  id="email"
                   class="form-control form-control-lg"
                   placeholder="Enter a valid email address"
                   name="email"
@@ -29,10 +27,10 @@
 
               <!-- Password input -->
               <div class="form-outline mb-3">
-                <label class="form-label" for="form3Example4">Password</label>
+                <label class="form-label" for="password">Password</label>
                 <input
                   type="password"
-                  id="form3Example4"
+                  id="password"
                   class="form-control form-control-lg"
                   placeholder="Enter password"
                   name="password"
